--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
       <h1>小梅觉得你可以试试2048</h1>
     <h2>网页端按↑↓←→进行游戏</h2 >
-    <h6>移动端还没测试。。。</h6>
+    <h6>移动端还没测试。。。（二编，可以滑动了</h6>
     <p>来一场酣畅淋漓的2048！！结束了刷新就好</p>
     <div id="game-board"></div>
     <p id="score">Score: 0</p >
